# bootcamp_2025_data_analytics

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
_tests/: test_exercises_5.py
_utilities/: __init__.py
assets/: backgrounds.html
bonus_examples/: .gitignore  README.md  web_scraping.ipynb
bonus_examples/tiny_reflex/: db_connection.py  queries.py  state.py  tiny_reflex.py  types.py
bonus_examples/tiny_reflex/pages/: customers.py  index.py  orders_customers.py  statistics.py
classes/: class_1.md
data_analysis/: JupyterNB.ipynb
data_analysis/src/: database.py
exercises/: .cursorrules  exercises_1.py  exercises_2.py  exercises_3.py  exercises_4.py  exercises_5.py
init-scripts/: 01-create-postgres-user.sql  02-create-northwind-db.sql
