[project]
name = "data-analysis"
version = "0.1.0"
description = "This is a Python course for the Devlights forth bootcamp."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Sebastián Atlántico", email = "sebastian.rodriguez@devlights.com" },
]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "reflex>=0.8.21",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = ["pytest>=9.0.1"]
